--- a/components/header/mobile-menu.css
+++ b/components/header/mobile-menu.css
@@ -7,6 +7,7 @@
   background-color: #fff;
   transition: all 0.75s;
   padding: 0.625rem 1.25rem 4.0625rem;
+  z-index: 100;
 }
 
 #main-header[data-show="false"] #mobile-menu {
